--- a/data_handle.ipynb
+++ b/data_handle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "be490469",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5bffc9df",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f3bc1908",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5b545e30",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aa77e98d",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7240f047",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "62e4f16c",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "            label_file_path = f\"{yolo_label_path}/{name.split(\".\")[0]}.txt\" \n",
     "            img_file_path = f\"{yolo_image_path}/{name.split(\".\")[0]}.jpg\"\n",
     "            \n",
-    "            with open(label_file_path, \"w+\") as label_file:\n",
+    "            with open(label_file_path, \"a+\") as label_file:\n",
     "                x_center = (bbox[0] + bbox[2]) / 2\n",
     "                y_center = (bbox[1] + bbox[3]) / 2\n",
     "                width = bbox[2] - bbox[0]\n",
@@ -120,7 +120,7 @@
     "                y_center = y_center / original_size[1]\n",
     "                width = width / original_size[0]\n",
     "                height = height / original_size[1]\n",
-    "                label_file.write(str(0) + \" \" + str(x_center) + \" \" + str(y_center) + \" \" + str(width) + \" \" + str(height) )\n",
+    "                label_file.write(str(0) + \" \" + str(x_center) + \" \" + str(y_center) + \" \" + str(width) + \" \" + str(height) + '\\n')\n",
     "            if not  os.path.exists(img_file_path):\n",
     "                # os.remove(img_file_path)\n",
     "                resized_img = img.resize((IMAGE_SIZE, IMAGE_SIZE))\n",
@@ -135,7 +135,7 @@
     "            img_file_path = f\"{yolo_image_path}/{nomal_item.split(\".\")[0]}.jpg\"\n",
     "            \n",
     "            if not os.path.exists(label_file_path):\n",
-    "                with open(label_file_path, \"w+\") as label_file:\n",
+    "                with open(label_file_path, \"a+\") as label_file:\n",
     "                    pass\n",
     "            if not os.path.exists(img_file_path):\n",
     "                with Image.open(f\"{path}/{normal_images_path}/{nomal_item}\") as img:\n",
@@ -147,30 +147,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "69ba3526",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1795\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1795/1795 [00:25<00:00, 69.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1125/1125 [00:51<00:00, 21.82it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "read_raw_data(raw_data_path[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ed50df6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9273\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9273/9273 [01:50<00:00, 83.72it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1674\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2518/2518 [01:49<00:00, 23.07it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "read_raw_data(raw_data_path[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "68c78949",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dataset split completed.\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import random\n",
